plugins {
    id 'java'
    id "io.spring.dependency-management" version "1.0.8.RELEASE"
}
apply plugin: 'java'
group 'com.fuli'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}
def fasterxml_jackson_version='2.9.9'
def google_guava_version='28.0-jre'
def okhttp_version='4.0.0'
def lombok_version='1.18.6'
def junit_version='5.5.1'
def junit_launcher_version='1.5.1'
dependencies {
    //json
    compile "com.fasterxml.jackson.datatype:jackson-datatype-hppc"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5"
    compile "com.fasterxml.jackson.core:jackson-annotations"
    compile "com.fasterxml.jackson.core:jackson-databind"
    compile "com.fasterxml.jackson.module:jackson-module-afterburner:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-hppc:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:${fasterxml_jackson_version}"
    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${fasterxml_jackson_version}"
    compile "com.squareup.okhttp3:okhttp:${okhttp_version}"
    compile "org.projectlombok:lombok:${lombok_version}"
    compile 'org.apache.commons:commons-lang3:3.9'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    compile "com.google.guava:guava:${google_guava_version}"
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    compile 'org.reflections:reflections:0.9.11'
    //test
    testCompile "org.mockito:mockito-core:2.27.0"
    testCompile("org.junit.jupiter:junit-jupiter-api:${junit_version}")
    testCompile("org.junit.jupiter:junit-jupiter-engine:${junit_version}")
    testCompile("org.junit.vintage:junit-vintage-engine:${junit_version}")
    testCompile("org.junit.platform:junit-platform-launcher:${junit_launcher_version}")
    testCompile("org.junit.platform:junit-platform-runner:${junit_launcher_version}")


}
